src/styles.css
body {
    background-color: #eceadc !important;
    text-align: center !important;
}

/* styles for the header */
.navbar-container {
    background-color: white;
    padding: 10px;
  }

  .brand-link {
    color: #333;
    font-size: 1.5rem;
    font-weight: bold;
  }

  .nav-links {
    color: blue;
  }

  .nav-link {
    margin-right: 20px;
    color: #333;
  }

  .nav-link:hover {
    color: #007bff;
  }

 .logos {
    height: 4.5rem;
    width: 6rem;
    float: right;
    margin-right: 2em;
}

/* heo section */
.component-below {
    clear: both;
}

  /* styles for the property listing */
  .property-listing-container {
    color: red;
  }

  .property-item {
    color: green;
  }

  /* styles for the footer */
  footer {
    color: green;
  }



  img {
    height: 50%;
    width: 50%;
    margin-left: 2rem;
  }

/* added to see if works */
@media screen and (min-width: 992px) {
  .split-container1 {
    display: flex;
    justify-content: space-between; /* Items spaced evenly */
    align-items: center; /* Center items vertically */
    padding: 20px;
    /* background-color: white; */
  }

  img {
    flex: 1; /* 50% width */
    display: flex;
    justify-content: space-around;
  }

  .text {
    flex: 1; /* 50% width */
    padding: 20px;
  }


  /* Q and A image at bottom */

  .qanda {
    height: 80%;
    width: 80%;
    margin-left: 7rem;
  }

  .helloletter {
    height: 80% !important;
    width: 60% !important;
    align-items: center !important;
    margin-left: 13rem;
  }
}


@media screen and (max-width: 664px) {
  img {
    height: 90%;
    width: 90%;
    margin: 0;
  }

}

@media screen and (min-width: 1000px) {
  .helloletter {
    margin-left: 17rem;
  }
}

.mainhouse {
  height: 100%;
  width: 100%;
}

/* FOOTER */

/* creating a box around the form */
.form-container {
  border: 4px solid white;
  padding: 20px;
  max-width: 400px;
  margin: 0 auto;
}

/* logo for the bottom */
.image-container {
text-align: center;
}

.image-container img {
  max-width: 100%;
  height: 40vh;
  width: 50vh;
  display: block;
  margin: 0 auto;
}

.titlestyle {
  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
  text-decoration: underline;
  font-size: 5rem;
}

.rates {
  background-color: white;
}

.teamcolor {
  background-color: white;
}

